# MCP-connect

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  mcp-servers.example.json  mcp-servers.example.yaml  mcp-servers.json  package-lock.json  package.json
deploy/e2b/: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  README.zh-CN.md  USAGE_IN_OTHER_PROJECTS.md  __init__.py  build.py  build_dev.py  build_prod.py  chrome-devtools-wrapper.sh  deploy.bak.py  e2b.Dockerfile  e2b.Dockerfile.minimal  e2b.Dockerfile.simple  e2b_sandbox_manager.py  example_usage.py  mcp-servers.json  nginx-default.conf  nginx.conf  pyproject.toml  quick_install.sh  quickstart.py  requirements.txt  sandbox_deploy.py  servers.json  setup.py  startup.sh  template.py  verify_installation.py  view_sandbox_logs.py
deploy/e2b/scripts/: chrome-devtools-wrapper.sh  create-startup-script.sh  setup-desktop-configs.sh
docs/: INSTALL.md  INSTALLATION_FIX.md  README.zh-CN.md  SUMMARY.md  WEBSOCKET_USAGE.md  configuration-alternatives.md  configuration-guide.md  deployment-guide.md  json-config-migration.md  quick-reference.md  session-cleanup-quickstart.md  session-cleanup.md
src/: index.ts
src/client/: mcp-client-manager.ts
src/config/: config.ts
src/server/: http-server.ts  n8n-mcp-wrapper.ts
src/stream/: session-manager.ts  stream-session.ts
